prevent word wrapping

--- a/apps/synapse-portal-framework/src/style/components/_NFBrowseToolsPage.scss
+++ b/apps/synapse-portal-framework/src/style/components/_NFBrowseToolsPage.scss
@@ -62,6 +62,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       font-size: 18px;
+      white-space: nowrap;
     }
   }
   .highlightSubmitToolContainer {
